Set overflow:hidden and word-wrap:break word in .list-group-item.sidebar, should fix some ugly overflow in browser windows < 1000px wide.

--- a/web/root/css/style.css
+++ b/web/root/css/style.css
@@ -76,6 +76,11 @@ pre.list {
 	border : none;
 }
 
+.list-group-item.sidebar {
+	overflow : hidden;
+	word-wrap : break-word;
+}
+
 .icon {
 	margin: 0 1em 1em 0;
 }
